# rust-go-kinesis-consumers

publisher/: Cargo.toml
publisher/src/: main.rs  models.rs
subscriber/: samconfig.toml  template.yaml
subscriber/kinesis-consumer/: README.md  samconfig.toml  template.yaml
subscriber/kinesis-consumer-model-one-go/: Makefile  go.mod  go.sum  main.go  model.go
subscriber/kinesis-consumer-model-one-go/test_events/: event.json
subscriber/kinesis-consumer-model-one-rust/events/: event.json
subscriber/kinesis-consumer-model-one-rust/rust_app/: Cargo.toml
subscriber/kinesis-consumer-model-one-rust/rust_app/src/: data_ops.rs  errors.rs  main.rs  models.rs
subscriber/kinesis-consumer/.aws-sam/: build.toml  sync.toml
subscriber/kinesis-consumer/.aws-sam/auto-dependency-layer/: template.yaml
subscriber/kinesis-consumer/.aws-sam/cache/30d725ab-0a27-4abe-b919-5f21471207ba/: bootstrap
subscriber/kinesis-consumer/rust_app/: Cargo.toml
subscriber/kinesis-consumer/rust_app/src/: main.rs  models.rs
