[package]
name = "publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-kinesis = { version = "1.3.0" }
tokio = { version = "1.20.1", features = ["full"] }
svix-ksuid = "^0.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
