[package]
name = "kinesis-consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lambda_runtime = "0.11.2"
aws_lambda_events = { version = "0.15.1", features = ["kinesis"] }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
  "json",
] }
serde_json = "1.0.117"
chrono = "0.4.38"
momento = "0.39.7"
aws-sdk-ssm = "1.33.0"
aws-config = { version = "1.5.1", features = ["behavior-version-latest"] }
thiserror = "1.0.61"
rand = "0.8.5"
aws-sdk-dynamodb = "1.34.0"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
